# serializer version: 1
# name: test_summary_with_extra_ids_snapshot
  '''
  
  ================================================================================
  DATA SUMMARY
  ================================================================================
  
  [OUTTURNS]
    Number of variables: 2
    Variables: gdp, inflation_long_name
  
    Variable            | Freq | Date                     | Vintage                 
    --------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2015-04-30 to 2016-09-30
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2015-04-30 to 2016-09-30
    --------------------------------------------------------------------------------
  
  [FORECASTS]
    Number of variables: 2
    Variables: gdp, inflation_long_name
  
    Number of sources: 2
    Sources: a_longer_source_name, short_source
    region: EU, UK
  
    a_longer_source_name  [region: EU]
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    -------------------------------------------------------------------------------------------
  
    a_longer_source_name  [region: UK]
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    -------------------------------------------------------------------------------------------
  
    short_source  [region: EU]
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    -------------------------------------------------------------------------------------------
  
    short_source  [region: UK]
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    -------------------------------------------------------------------------------------------
  ================================================================================
  
  
  '''
# ---
# name: test_summary_with_no_extra_ids_snapshot
  '''
  
  ================================================================================
  DATA SUMMARY
  ================================================================================
  
  [OUTTURNS]
    Number of variables: 2
    Variables: gdp, inflation_long_name
  
    Variable            | Freq | Date                     | Vintage                 
    --------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2015-04-30 to 2016-09-30
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2015-04-30 to 2016-09-30
    --------------------------------------------------------------------------------
  
  [FORECASTS]
    Number of variables: 2
    Variables: gdp, inflation_long_name
  
    Number of sources: 2
    Sources: a_longer_source_name, short_source
  
    a_longer_source_name
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 13 
    -------------------------------------------------------------------------------------------
  
    short_source
    Variable            | Freq | Date                     | Vintage                  | Horizon 
    -------------------------------------------------------------------------------------------
    gdp                 | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    inflation_long_name | Q    | 2015-03-31 to 2016-06-30 | 2014-12-31 to 2016-09-30 | 0 to 8  
    -------------------------------------------------------------------------------------------
  ================================================================================
  
  
  '''
# ---
